[package]
name = "ark-bls12-381"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "The BLS12-381 pairing-friendly elliptic curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/curves"
documentation = "https://docs.rs/ark-bls12-381/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
#ark-ff = { version="^0.3.0", default-features = false }
ark-ff = { git = "https://github.com/mmagician/algebra", branch = 'mmagician/cosmetic-fixes', default-features = false }
# ark-ff = { git = "https://github.com/w3f/arkworks-algebra", branch = 'hash_to_curve_wb', default-features = false }
# ark-ff = { path = "/Users/marcin/personal/arkworks/algebra/ff", default-features = false }
#ark-ec = { version="^0.3.0", default-features = false }
# ark-ec = { path = "/Users/marcin/personal/arkworks/algebra/ec", version = "^0.3.0", default-features = true }
ark-ec = { git = "https://github.com/mmagician/algebra", branch = 'mmagician/cosmetic-fixes', default-features = true } #needs digest for hashing
# ark-ec = { git = "https://github.com/w3f/arkworks-algebra", branch = 'hash_to_curve_wb', default-features = true } #needs digest for hashing
ark-std = { version="^0.3.0", default-features = false }

[dev-dependencies]
#ark-serialize = { version="^0.3.0", default-features = false }
ark-serialize = { git = "https://github.com/mmagician/algebra", branch = 'mmagician/cosmetic-fixes', default-features = false }
# ark-serialize = { git = "https://github.com/w3f/arkworks-algebra", branch = 'hash_to_curve_wb', default-features = false }
# ark-serialize = { path = "/Users/marcin/personal/arkworks/algebra/serialize", default-features = false }
# ark-algebra-test-templates = { version="^0.3.0", default-features = false }
ark-algebra-test-templates = { git = "https://github.com/mmagician/algebra", branch = 'mmagician/cosmetic-fixes', default-features = false }
# ark-algebra-test-templates = { git = "https://github.com/w3f/arkworks-algebra", branch = 'hash_to_curve_wb', default-features = false }
# ark-algebra-test-templates = { path = "/Users/marcin/personal/arkworks/algebra/test-templates", default-features = false }
sha2 = "^0.9"

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

curve = [ "scalar_field" ]
scalar_field = []
